--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-api-server",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "server.js",
   "engines": {
     "node": "14.x"
   },
