--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,10 @@
 {
   "version": 2,
+  "name": "nodejs-api-server",
   "builds": [
-    {
-      "src": "src/index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "src/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "/(.*)", "dest": "/server.js" }
   ]
 }
