--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "node": "14.x"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
