--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "expess": "^0.0.1-security",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "vercel": "^24.2.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
