--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "nodejs-api-server",
   "version": "1.0.0",
   "description": "",
+  "main": "server.js",
   "engines": {
     "node": "18.x"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
