--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,23 @@
   "version": 2,
   "name": "nodejs-api-server",
   "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/server.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/(.+)",
+      "dest": "public/$1"
+    }
   ]
 }
