--- a/vercel.json
+++ b/vercel.json
@@ -13,12 +13,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/((?!.*\\.\\w+$).*)",
       "dest": "/server.js"
     },
     {
-      "src": "/(.+)",
-      "dest": "public/$1"
+      "src": "/(.+\\.[a-z]+)$",
+      "dest": "/public/$1"
     }
   ]
 }
